--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<aside class = "news">
 			
 			<h2> Новости </h2>
-			<p> Департамент защиты прав потребителей: от купленной путевки в Китай можно отказаться...</p>
+			<p class="new"> Департамент защиты прав потребителей: от купленной путевки в Китай можно отказаться...</p>
 			
 
 		</aside>
@@ -26,11 +26,11 @@
 		<section>
 
 			<article class = "select1">
-				<h3> Секретарь </h3>
+				<a> Секретарь </a>
 				<p> Анна Миронова </p>
 				<p>	e-mail: mironova.a@gmail.com </p>
 				<p> тел: +372 7882 9261 </p>
-				<!--<img src="Images/logo.png" class="logo">-->
+				<img src="images/Anna.png" class="anna">
 				
 			</article>
 
@@ -38,7 +38,7 @@
 
 			
 			<article class = "select2">
-				<h3> Секретарь </h3>
+				<a> Секретарь </a>
 				<p> Екатерина Кораленко   </p>
 				<p> e-mail: Koralenko.katya@gmail.com </p>
 				<p> тел: +372 5682 8721  </p>
@@ -50,7 +50,7 @@
 
 			
 			<article class = "select3">
-				<h3> Заметстиель Директора  </h3>
+				<a> Заметстиель Директора  </a>
 				<p> Андрес Тамм </p>
 				<p> e-mail: TammA@gmail.com </p>
 				<p> тел: +372 7590 4029 </p>
@@ -62,7 +62,7 @@
 
 
 			<article class = "select4">
-				<h3> Директор </h3>
+				<a> Директор </a>
 				<p> Чанчунь Ли  </p>
 				<p> e-mail: LiCha@gmail.com </p>
 				<p> тел: +372 6290 4528 </p>
