--- a/Klishin_Site.html
+++ b/Klishin_Site.html
@@ -84,14 +84,17 @@
 
 		
 	</form>
-		<nav>
+		<nav class = "a">
 			<ul>
-				<li> Главная </li>
-				<li> О нас</li>
-				<li> Регистр </li>
-				<li> Контакты </li>
-				<li> Отзывы </li>
-				<li> Фото </li>
+				<li><a href="Klishin_Site.html"> Главная </a></li>
+
+				<li> Регистр </a></li>
+
+				<li><a href="index.html"> Контакты <a>
+
+				<li><a href="index3.html"> Отзывы </a></li>
+
+				<li><a href="index2.html"> Фото </a></li>
 				
 
 			</ul>
@@ -104,9 +107,9 @@
 	</main>
 
 <footer>
-	<a class = "FAQ"> FAQ </a>
-	<a class = "kontakt"> Контакты </a>
-	<a class = "adress"> Адрес </a>
+	<a href="index4.html" class = "FAQ"> FAQ </a>
+	<a  href="index.html" class = "kontakt"> Контакты </a>
+	<a  target="_blank" href = "https://www.google.ee/maps/place/Ida-Virumaa+Kutsehariduskeskus+Jõhvi+õppekoht/@59.3592594,27.3998024,17z/data=!4m12!1m6!3m5!1s0x4694656198591917:0xc70b54a9fc5465e5!2sLa+Fourmi+IVKHK!8m2!3d59.3600011!4d27.3986095!3m4!1s0x0:0xb8ed670e5bf3cb7c!8m2!3d59.3602424!4d27.3978216" class = "adress"> Адрес </a>
 </footer>
 
 
